--- a/ประชุมรอบกองไฟ.md
+++ b/ประชุมรอบกองไฟ.md
@@ -190,3 +190,9 @@ ________________________________________________________________
 โครงงานนี้เป็น ต้นแบบขนาดเล็ก เพื่อศึกษาการใช้เซนเซอร์และระบบอัตโนมัติขั้นพื้นฐาน
 
 [เป็นขอบเขตที่กำหนดไว้ก่อนอาจจะทำได้ไม่ได้หรทอได้ต้องลองกำหนอโครงงานหลักก่อน************]
+
+ประชุมครั้งที่7 
+นางสาวกันติชา ย๋องชา 68030020 ประธาน
+ณภัทร สิงห์ตุ้ย 68030080 รองประธาน
+ณัทภพ เกษมสานต์ 68030095 สมาชิก
+ พรีเซนต์ความก้าวหน้าครั้ง1 
