--- a/ประชุมรอบกองไฟ.md
+++ b/ประชุมรอบกองไฟ.md
@@ -196,3 +196,45 @@ ________________________________________________________________
 ณภัทร สิงห์ตุ้ย 68030080 รองประธาน
 ณัทภพ เกษมสานต์ 68030095 สมาชิก
  พรีเซนต์ความก้าวหน้าครั้ง1 
+
+
+ประชุมครั้งที่ 8  28/01
+ นางสาวกันติชา ย๋องชา 68030020 รองประธาน
+ณภัทร สิงห์ตุ้ย 68030080  สมาชิก
+ณัทภพ เกษมสานต์ 68030095 ประธาน
+
+นำเสนอโครงงานใหม่เป็น
+แนวคิดของแอป
+
+แอปนี้เลยเกิดมาเป็น
+“ผู้ช่วยส่วนตัวของครู”
+ที่ช่วยตั้งแต่ ก่อนสอน – ระหว่างสอน – หลังสอน
+
+ไม่ใช่แอปสอนแทนครู
+แต่เป็นแอปที่ ช่วยให้ครูจัดการเรียนรู้ได้ดีขึ้น
+
+🧩 ฟังก์ชันหลักของแอป (ผูกกับสตอรี่)
+
+1️⃣ ฟังก์ชันสร้างแผนการสอน (Lesson Planning)
+
+📌 สตอรี่
+
+ก่อนสอน ครูมักงงว่า
+
+วันนี้จะสอนอะไร
+ใช้วิธีไหนดี
+จะประเมินยังไง
+
+🛠 ฟังก์ชัน
+	•	กรอกข้อมูลพื้นฐาน
+	•	รายวิชา
+	•	ระดับชั้น
+	•	เวลาเรียน
+	•	แอปแสดง โครงร่างแผนการสอน
+	•	วัตถุประสงค์
+	•	กิจกรรม
+	•	การประเมิน
+
+🎯 ประโยชน์
+	•	ครูมือใหม่ไม่หลงทาง
+	•	เห็นภาพการสอนชัดก่อนเข้าห้อง
