--- a/ประชุมรอบกองไฟ.md
+++ b/ประชุมรอบกองไฟ.md
@@ -238,3 +238,6 @@ ________________________________________________________________
 🎯 ประโยชน์
 	•	ครูมือใหม่ไม่หลงทาง
 	•	เห็นภาพการสอนชัดก่อนเข้าห้อง
+
+
+	ประชุมครั้งที่ 9 ปรับเปลี่ยนโครงงานเป็นเน้นด้านกิจกรรมมากยิ่งขึ้น
