--- a/ประชุมรอบกองไฟ.md
+++ b/ประชุมรอบกองไฟ.md
@@ -241,3 +241,6 @@ ________________________________________________________________
 
 
 	ประชุมครั้งที่ 9 ปรับเปลี่ยนโครงงานเป็นเน้นด้านกิจกรรมมากยิ่งขึ้น
+
+
+	ประชุมครั้งที่10 ทำเล่มนำเสนอหัวข้อ และสไลด์นำเสนอความก้าวหน้า  
